--- a/templates/api_test.mustache
+++ b/templates/api_test.mustache
@@ -28,7 +28,18 @@ class {{#operations}}Test{{classname}}(unittest.TestCase):
         """
         pass
 
-   {{/operation}}
+{{#vendorExtensions.x-equinix-metal-paginated-property}}
+    def test_{{operationId}}_all_pages(self):
+        """Test case for {{{operationId}}}_all_pages
+
+{{#summary}}
+        {{{.}}}  # noqa: E501
+{{/summary}}
+        """
+        pass
+
+{{/vendorExtensions.x-equinix-metal-paginated-property}}
+{{/operation}}
 {{/operations}}
 
 if __name__ == '__main__':
