--- a/templates/api_test.mustache
+++ b/templates/api_test.mustache
@@ -26,6 +26,17 @@ class {{#operations}}Test{{classname}}(unittest.TestCase):
         """
         pass
 
+{{#vendorExtensions.x-equinix-metal-paginated-property}}
+    def test_{{operationId}}_all_pages(self):
+        """Test case for {{{operationId}}}_all_pages
+
+{{#summary}}
+        {{{.}}}  # noqa: E501
+{{/summary}}
+        """
+        pass
+
+{{/vendorExtensions.x-equinix-metal-paginated-property}}
    {{/operation}}
 {{/operations}}
 
